# ddpw

./: .envrc  .gitignore  LICENCE  LICENCE.md  README.md  environment.yaml  environment.yml  freeze.sh  infer.py  main.py  pyproject.toml  requirements.txt  setup.py  slurm.sh  test.py  train.py  tryout.sh
.github/workflows/: conda_publish.yaml  pypi_publish.yaml  s3_publish.yaml  surge_publish.yaml
conda/: conda_build_config.yaml  meta.yaml
ddpw/: __init__.py  __logger.py  __parallelit.py  __platform.py  __trainer.py  __wrapper.py  artefacts.py  functional.py  io.py  job.py  platform.py  trainer.py  utils.py  wrapper.py
ddpw/gpu_setup/: __dataset.py  __init__.py  __model.py  __seed.py
ddpw/utils/: chalk.py  torchtils.py
ddpwrapper/: __init__.py  __logger.py  __parallelit.py  __platform.py  __trainer.py  __wrapper.py  utils.py
dev/: environment.yaml  requirements.txt
docs/: .gitignore  Makefile  README.md  environment.yaml  footer-remove.sh  publish.sh  related-information  requirements.txt
docs/docs/: LICENCE.rst  conf.py  index.rst
docs/docs/api/: ddpwrapper.rst  job.rst  logger.rst  optimiser.rst  platform.rst  trainer.rst  types.rst  utils.rst  wrapper.rst
docs/docs/contribution/: documentation.rst  setup.rst  source.rst
docs/docs/quickstart/: example.rst  examples.rst  installation.rst  mnist.rst
docs/src/: LICENCE.rst  conf.py  index.rst
docs/src/_static/: custom.css  fonts.css
docs/src/_templates/: page.html
docs/src/api/: core.rst  functional.rst  platform.rst  utils.rst  wrapper.rst
docs/src/bureau/: contribution.rst
docs/src/contribution/: documentation.rst  source.rst
docs/src/development/: contribution.rst  source.rst
docs/src/misc/: mnist.rst
docs/src/quickstart/: installation.rst  mnist.rst
lib/: dataset.py  loss.py  model.py  trainer.py
src/: dataset.py  loss.py  model.py  trainer.py
