[project]
    name = "ddpw"
    version = "5.3.1"
    description = "A lightweight wrapper that scaffolds PyTorch's (Distributed Data) Parallel."
    authors = [ { name = "Sujal Vijayaraghavan" } ]
    maintainers = [ { name = "Sujal Vijayaraghavan" } ]
    readme = "README.md"
    requires-python = ">=3.10"
    dependencies = [
        "numpy>=1.24.0",
        "torch>=2.0.0",
        "submitit>=1.4.5"
    ]
    license = { file = "LICENCE" }
    keywords = [ "pytorch", "distributed compute" ]
    classifiers = [
        "Programming Language :: Python"
    ]

    [project.urls]
        Homepage = "https://ddpw.projects.sujal.tv"
        Repository = "https://github.com/sujaltv/ddpw"
        Documentation = "https://ddpw.projects.sujal.tv"

[build-system]
    requires = ["setuptools>=68", "wheel"]
    build-backend = "setuptools.build_meta"

[tool.setuptools]
    packages = [ "ddpw" ]

    [tool.setuptools.package-dir]
        ddpw = "./ddpw"
