[project]
    name = "ddpw"
    version = "5.5.0"
    description = "A lightweight wrapper that scaffolds PyTorch's Distributed (Data) Parallel."
    authors = [ { name = "Sujal Vijayaraghavan" } ]
    maintainers = [ { name = "Sujal Vijayaraghavan" } ]
    readme = "README.md"
    requires-python = ">=3.13"
    dependencies = [
        "submitit>=1.5.3",
        "torch>=2.8.0",
    ]
    license = "BSD-3-Clause"
    license-files = [ "LICENCE" ]
    keywords = [ "pytorch", "distributed compute" ]
    classifiers = [
        "Programming Language :: Python"
    ]

    [project.urls]
        Homepage = "https://ddpw.projects.sujal.tv"
        Repository = "https://github.com/sujaltv/ddpw"
        Documentation = "https://ddpw.projects.sujal.tv"

[build-system]
    requires = ["uv_build>=0.8.11"]
    build-backend = "uv_build"

[tool.uv.build-backend]
    module-name = "ddpw"
    module-root = "."

[dependency-groups]
    docs = [
        "fluiddyn>=0.9.0",
        "furo>=2025.7.19",
        "sphinx>=8.2.3",
        "sphinx-copybutton>=0.5.2",
        "sphinx-inline-tabs>=2023.4.21",
        "sphinxcontrib-bibtex>=2.6.5",
    ]
